tests/NormalTests/paczka2/big_fuzzy/25182704.err
Error in line 9: OGzt A378 30,6
Error in line 12: S224 A687 224,5
Error in line 17: AgCuCv2jMX A687 92,5
Error in line 23: OGzt A687 18,5
Error in line 26: lzQDREN A687 3,3
Error in line 36: AgCuCv2jMX S898 19,5
Error in line 41: AgCuCv2jMX A378 14,3
Error in line 42: pYyZBWcModw S898 96,5
Error in line 37: uYr4CAGMK S898 4,0
Error in line 47: pYyZBWcModw A687 18,1
Error in line 54: OGzt A378 36,41
Error in line 43: AgCuCv2jMX S898 67,5
Error in line 57: AgCuCv2jMX S224 86,0
Error in line 56: 0z44 A687 58,7
Error in line 45: S224 S898 72,7
Error in line 48: uYr4CAGMK S224 78,3
Error in line 59: OGzt A378 8,7
Error in line 66: OGzt S224 34,8
Error in line 75: OGzt A378 26,7
Error in line 97: S22T A378 22,T
Error in line 96: S224 S898 93,6
Error in line 99: S224 A378 8,8
Error in line 102: S224 A687 38,5
Error in line 89: lzQDREN A378 76,4
Error in line 118: uYr4CAGMK A378 84,4
Error in line 116: AgCuCv2jMX A687 64,0
Error in line 133: AgCuCv2jMX A378 56,4
Error in line 134: pYyZBWcModw S898 253,4
Error in line 132: OGzt A687 3761,1
Error in line 137: OGzt S898 57,2
Error in line 154: 0z44 A378 28,8
Error in line 156: 0z44 S224 32,2
Error in line 165: uYr4CAGMK S898 83,7
Error in line 174: uYr4CAGMK A687 66,4
Error in line 183: uYr4CAGMK A378 80,85
Error in line 181: pYyZBWcModw A378 7,8
Error in line 192: uYr4CAGMK S224 70,1
Error in line 193: uYr4CAGMK A687 66,1
Error in line 195: 0z44 A687 24,7
Error in line 196: 0z44 A378 82,9
Error in line 198: lzQDREN A378 48,5
Error in line 194: uYr4CAGMK A378 14,0
Error in line 201: lzQDREN S224 88,0
Error in line 209: lzQDREN A687 31,6
Error in line 224: lzQDREN A378 229,85
Error in line 228: lzQDREN A687 54,3
Error in line 227: uYr4CAGMK A687 45,1
Error in line 230: lzQDREN S224 53,1
Error in line 248: uYr4CAGMK S898 92,7
